# docs/swagger.json
@@ -18,6 +18,32 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/api/categories": {
+            "get": {
+                "description": "Handle /api/categories (GET)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "categories"
+                ],
+                "summary": "List categories",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.Category"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/products": {
             "get": {
                 "description": "Handle /api/products (GET and POST)",
